<resources>
    <string name="app_name">Baby Tracker</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="save_button_text">Save</string>
    <string name="add_button_text">Add</string>
    <string name="action_settings">Settings</string>
    <string name="baby_edit_msg">Edit %s</string>
    <string name="baby_created_msg">Baby %s added</string>
    <string name="baby_feed_value_msg">"%s drank %s%s"</string>
    <string name="baby_change_value_msg">"%s had a %s nappy"</string>
    <string name="baby_saved_msg">Baby %s saved</string>
    <string name="add_new_feed">Add a new feed</string>
    <string name="add_new_baby">Add a new baby</string>
    <string name="delete_baby">Delete baby</string>
    <string name="edit_feed_title">Edit feed</string>
    <string name="add_new_change">Add a new change</string>
    <string name="edit_change">Edit change</string>
    <string name="new_feed_when">When</string>
    <string name="new_feed_qty">How much</string>
    <string name="new_feed_unit">ml</string>
    <string name="new_feed_hint">xx</string>
    <string name="wet_nappy">wet</string>
    <string name="soiled_nappy">soiled</string>
    <string name="today">Today</string>
</resources>
