<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/activityValueUnit"
        android:layout_width="40dp"
        android:layout_height="0dp"
        android:layout_marginEnd="70dp"
        android:gravity="center|start|center_vertical"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/nappyChangeTypeGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nappyChangeTypeGroup" />

    <EditText
        android:id="@+id/activityValue"
        style="@style/Base.Widget.MaterialComponents.TextInputEditText"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="end|center_vertical"
        android:inputType="numberDecimal"
        android:textColor="#1976D2"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/activityValueUnit"
        app:layout_constraintStart_toEndOf="@+id/activityIcon"
        app:layout_constraintTop_toBottomOf="@+id/activityTimeSelect" />

    <TextView
        android:id="@+id/activityDate"
        android:layout_width="152dp"
        android:layout_height="37dp"
        android:layout_marginBottom="152dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activityDbId"
        android:layout_width="26dp"
        android:layout_height="24dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activityDaySelect"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:textColor="#1976D2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dateIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activityTimeSelect"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:textColor="#1976D2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dateIcon2"
        app:layout_constraintTop_toBottomOf="@+id/activityDaySelect" />

    <TextView
        android:id="@+id/activityTitle"
        android:layout_width="173dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/add_new_feed"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/activityDbId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="60dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="2dp" />

    <ImageView
        android:id="@+id/dateIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activityDaySelect"
        app:srcCompat="@drawable/calendar" />

    <ImageView
        android:id="@+id/dateIcon2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activityTimeSelect"
        app:srcCompat="@drawable/clock" />

    <ImageView
        android:id="@+id/activityIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activityValue"
        app:srcCompat="@drawable/feed" />

    <RadioGroup
        android:id="@+id/nappyChangeTypeGroup"
        android:layout_width="92dp"
        android:layout_height="68dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/activityIcon"
        app:layout_constraintTop_toBottomOf="@+id/activityTimeSelect">

        <RadioButton
            android:id="@+id/rb_wetNappy"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:button="@drawable/wet_nappy"
            android:layoutDirection="rtl"
            android:tag="@string/wet_nappy"
            android:textAlignment="textStart"
            tools:layout_editor_absoluteX="-66dp"
            tools:layout_editor_absoluteY="114dp" />

        <RadioButton
            android:id="@+id/rb_soiledNappy"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:button="@drawable/soiled_nappy"
            android:gravity="center"
            android:tag="@string/soiled_nappy" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>